--- a/MIS PROYECTOS DEVELOPER/CSS BASICO/tabla-precios.html
+++ b/MIS PROYECTOS DEVELOPER/CSS BASICO/tabla-precios.html
@@ -5,15 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Poltawski+Nowy:ital,wght@0,400;0,700;1,500&family=Tilt+Warp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tabla-precios.css">
 </head>
 <body>
 
-    <section>
-        <div>
+    <section class="container flex text-center">
+        <div class="columna">
             <h2>Plan uno</h2>
-            <p>$500.000</p>
+            <p class="precio">$500.000</p>
             <p>Lorem ipsum dolor sit  amet consectetur adipisicing elit.</p>
+            <hr>
+            <p>lorem ipsum dolor</p>
+            <p>Lorem ipsum dolor sitamet consectetur</p>
+            <p>Lorem ipsum</p>
+            <hr>
+            <a href="#" class="btn-precio">Comprar</a>
+        </div>
+        <div class="columna">
+            <h2>Plan uno</h2>
+            <p class="precio">$500.000</p>
+            <p>Lorem ipsum dolor sit  amet consectetur adipisicing elit.</p>
+            <hr>
+            <p>lorem ipsum dolor</p>
+            <p>Lorem ipsum dolor sitamet consectetur</p>
+            <p>Lorem ipsum</p>
+            <hr>
+            <a href="#" class="btn-precio">Comprar</a>
+        </div>
+        <div class="columna">
+            <h2>Plan uno</h2>
+            <p class="precio">$500.000</p>
+            <p>Lorem ipsum dolor sit  amet consectetur adipisicing elit.</p>
+            <hr>
+            <p>lorem ipsum dolor</p>
+            <p>Lorem ipsum dolor sitamet consectetur</p>
+            <p>Lorem ipsum</p>
+            <hr>
+            <a href="#" class="btn-precio">Comprar</a>
+        </div>
+        <div class="columna">
+            <h2>Plan uno</h2>
+            <p class="precio">$500.000</p>
+            <p>Lorem ipsum dolor sit  amet consectetur adipisicing elit.</p>
+            <hr>
+            <p>lorem ipsum dolor</p>
+            <p>Lorem ipsum dolor sitamet consectetur</p>
+            <p>Lorem ipsum</p>
+            <hr>
+            <a href="#" class="btn-precio">Comprar</a>
         </div>
     </section>
     
